<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="english_ime_name" translatable="false">HeliBoard</string>
    <string name="spell_checker_service_name">HeliBoard Spell Checker</string>
    <string name="ime_settings">HeliBoard Settings</string>
    <string name="android_spell_checker_settings">HeliBoard Spell Checker Settings</string>
    <string name="use_contacts_for_spellchecking_option_title">Look up contact names</string>
    <string name="use_contacts_for_spellchecking_option_summary">Spell checker uses entries from your contact list</string>
    <string name="vibrate_on_keypress">Vibrate on keypress</string>
    <string name="sound_on_keypress">Sound on keypress</string>
    <string name="popup_on_keypress">Popup on keypress</string>
    <string name="settings_screen_preferences">Preferences</string>
    <string name="settings_screen_gesture">Gesture Typing</string>
    <string name="settings_screen_correction">Text correction</string>
    <string name="settings_screen_advanced">Advanced</string>
    <string name="settings_screen_theme">Theme</string>
    <string name="settings_category_input">Input</string>
    <string name="settings_category_additional_keys">Additional keys</string>
    <string name="settings_category_clipboard_history">Clipboard history</string>
    <string name="settings_category_correction">Corrections</string>
    <string name="settings_category_suggestions">Suggestions</string>
    <string name="settings_category_experimental">Experimental</string>
    <string name="settings_category_miscellaneous">Miscellaneous</string>
    <string name="enable_split_keyboard">Enable split keyboard</string>
    <string name="split_spacer_scale">Split distance</string>
    <string name="language_switch_key_switch_input_method">Switch to other input methods</string>
    <string name="switch_language">Switch Language</string>
    <string name="language_switch_key_switch_both">Switch both</string>
    <string name="show_language_switch_key">Language switch key</string>
    <string name="language_switch_key_behavior">Language switch key behavior</string>
    <string name="show_emoji_key">Emoji key</string>
    <string name="abbreviation_unit_milliseconds"><xliff:g id="MILLISECONDS">%s</xliff:g> ms</string>
    <string name="abbreviation_unit_minutes"><xliff:g id="MINUTES">%s</xliff:g> min</string>
    <string name="settings_system_default">System default</string>
    <string name="settings_no_limit">No limit</string>
    <string name="use_contacts_dict">Suggest Contact names</string>
    <string name="use_contacts_dict_summary">Use names from Contacts for suggestions and corrections</string>
    <string name="use_personalized_dicts">Personalized suggestions</string>
    <string name="disable_personalized_dicts_message">Warning: Disabling this setting will clear learned data</string>
    <string name="add_to_personal_dictionary">Add words to personal dictionary</string>
    <string name="add_to_personal_dictionary_summary">Use device personal dictionary to store learned words</string>
    <string name="use_double_space_period">Double-space period</string>
    <string name="use_double_space_period_summary">Double tap on spacebar inserts a period followed by a space</string>
    <string name="auto_cap">Auto-capitalization</string>
    <string name="auto_cap_summary">Capitalize the first word of each sentence</string>
    <string name="edit_personal_dictionary">Personal dictionary</string>
    <string name="configure_dictionaries_title">Add-on dictionaries</string>
    <string name="main_dictionary">Main dictionary</string>
    <string name="prefs_show_suggestions">Show correction suggestions</string>
    <string name="prefs_show_suggestions_summary">Display suggested words while typing</string>
    <string name="prefs_always_show_suggestions">Always show suggestions</string>
    <string name="prefs_always_show_suggestions_summary">Ignore other apps’ request to disable suggestions (may cause issues)</string>
    <string name="prefs_block_potentially_offensive_title">Block offensive words</string>
    <string name="prefs_block_potentially_offensive_summary">Do not suggest potentially offensive words</string>
    <string name="autocorrect">Auto-correction</string>
    <string name="auto_correction_summary">Spacebar and punctuation automatically correct mistyped words</string>
    <string name="more_autocorrect">More auto-correction</string>
    <string name="more_autocorrect_summary">Auto-correct even when not explicitly requested by the input field</string>
    <string name="auto_correction_confidence">Auto-correction confidence</string>
    <string name="auto_correction_threshold_mode_off">Off</string>
    <string name="auto_correction_threshold_mode_modest">Modest</string>
    <string name="auto_correction_threshold_mode_aggressive">Aggressive</string>
    <string name="auto_correction_threshold_mode_very_aggressive">Very aggressive</string>
    <string name="center_suggestion_text_to_enter">Always use middle suggestion</string>
    <string name="center_suggestion_text_to_enter_summary">On pressing space or punctuation, the middle suggestion will be entered</string>
    <string name="bigram_prediction">Next-word suggestions</string>
    <string name="bigram_prediction_summary">Use the previous word in making suggestions</string>
    <string name="gesture_input">Enable gesture typing</string>
    <string name="gesture_input_summary">Input a word by sliding through the letters</string>
    <string name="gesture_preview_trail">Show gesture trail</string>
    <string name="gesture_floating_preview_text">Dynamic floating preview</string>
    <string name="gesture_floating_preview_text_summary">See the suggested word while gesturing</string>
    <string name="gesture_space_aware">Phrase gesture</string>
    <string name="gesture_space_aware_summary">Input spaces during gestures by gliding to the space key</string>
    <string name="enable_clipboard_history">Enable clipboard history</string>
    <string name="enable_clipboard_history_summary">If disabled, clipboard key will paste clipboard content if any</string>
    <string name="clipboard_history_retention_time">History retention time</string>
    <string name="delete_swipe">Delete swipe</string>
    <string name="delete_swipe_summary">Perform a swipe from the delete key to select and remove bigger portions of text at once</string>
    <string name="backup_restore_title">Backup and restore</string>
    <string name="backup_restore_message">Save or load from file. Warning: restore will overwrite existing data</string>
    <string name="backup_error">Backup error: %s</string>
    <string name="restore_error">Error restoring the backup: %s</string>
    <string name="button_backup">Backup</string>
    <string name="button_restore">Restore</string>
    <string name="secondary_locale">Multilingual typing</string>
    <string name="load_gesture_library">Load gesture typing library</string>
    <string name="load_gesture_library_summary">Provide a native library to enable gesture typing</string>
    <string name="load_gesture_library_message">You will need the library for \'%s\'. Incompatible libraries may crash when using gesture typing.
        \n\nWarning: loading external code can be a security risk. Only use a library from a source you trust.</string>
    <string name="checksum_mismatch_message">Unknown library file. Are you sure you got it from a trusted source and it is for \'%s\'?</string>
    <string name="load_gesture_library_button_load">Load library</string>
    <string name="load_gesture_library_button_delete">Delete library</string>
    <string name="autospace_after_punctuation">Autospace after punctuation</string>
    <string name="autospace_after_punctuation_summary">Automatically insert space after punctuation when typing a new word</string>
    <string name="show_popup_keys_title">Show more letters with diacritics in popup</string>
    <string name="show_popup_keys_normal">Show variants defined in keyboard languages (default)</string>
    <string name="show_popup_keys_more">Add common variants</string>
    <string name="show_popup_keys_all">Add all available variants</string>
    <string name="url_detection_title">URL detection</string>
    <string name="url_detection_summary">Try to detect URLs and similar as a single word</string>
    <string name="incognito">Force incognito mode</string>
    <string name="prefs_force_incognito_mode_summary">Disable learning of new words</string>
    <string name="more_keys_strip_description">More keys</string>
    <string name="language_and_layouts_title">Languages &amp; Layouts</string>
    <string name="number_row">Number row</string>
    <string name="number_row_summary">Always show number row</string>
    <string name="localized_number_row">Localize number row</string>
    <string name="localized_number_row_summary">Prefer localized over latin numbers</string>
    <string name="show_hints">Show key hints</string>
    <string name="show_hints_summary">Show long-press hints</string>
    <string name="hint_source">Select hint source</string>
    <string name="popup_order">Select popup key order</string>
    <string name="popup_keys_number" tools:keep="@string/popup_keys_number">Number row</string>
    <string name="popup_keys_language" tools:keep="@string/popup_keys_language">Language</string>
    <string name="popup_keys_language_priority" tools:keep="@string/popup_keys_language_priority">Language (priority)</string>
    <string name="popup_keys_layout" tools:keep="@string/popup_keys_layout">Layout</string>
    <string name="popup_keys_symbols" tools:keep="@string/popup_keys_symbols">Symbols</string>
    <string name="toolbar_keys">Select toolbar keys</string>
    <string name="copy" tools:keep="@string/copy" translatable="false">@android:string/copy</string>
    <string name="cut" tools:keep="@string/cut">Cut</string>
    <string name="clipboard" tools:keep="@string/clipboard">Clipboard</string>
    <string name="clear_clipboard" tools:keep="@string/clear_clipboard">Clear clipboard</string>
    <string name="voice" tools:keep="@string/voice">Voice input</string>
    <string name="settings" tools:keep="@string/settings">Settings</string>
    <string name="select_all" tools:keep="@string/select_all" translatable="false">@android:string/selectAll</string>
    <string name="select_word" tools:keep="@string/select_word">Select word</string>
    <string name="one_handed" tools:keep="@string/one_handed">One-handed mode</string>
    <string name="full_left" tools:keep="@string/full_left">Full left</string>
    <string name="full_right" tools:keep="@string/full_right">Full right</string>
    <string name="left" tools:keep="@string/left">Left</string>
    <string name="right" tools:keep="@string/right">Right</string>
    <string name="up" tools:keep="@string/up">Up</string>
    <string name="down" tools:keep="@string/down">Down</string>
    <string name="undo" tools:keep="@string/undo">Undo</string>
    <string name="redo" tools:keep="@string/redo">Redo</string>
    <string name="clipboard_toolbar_keys">Select clipboard toolbar keys</string>
    <string name="pinned_toolbar_keys">Select pinned toolbar keys</string>
    <string name="quick_pin_toolbar_keys">Pin toolbar key on long press</string>
    <string name="quick_pin_toolbar_keys_summary">This will disable other long press actions for toolbar keys that are not pinned</string>
    <string name="settings_screen_toolbar">Toolbar</string>
    <string name="toolbar_direction">Toolbar direction</string>
    <string name="auto_show_toolbar">Auto show toolbar</string>
    <string name="auto_show_toolbar_summary">Show the toolbar if input starts or text is selected</string>
    <string name="auto_hide_toolbar">Auto hide toolbar</string>
    <string name="auto_hide_toolbar_summary">Hide the toolbar when suggestions become available</string>
</resources>