<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2014 The Android Open Source Project
    modified
    SPDX-License-Identifier: Apache-2.0 AND GPL-3.0-only
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:latin="http://schemas.android.com/apk/res-auto"
    android:title="@string/settings_screen_toolbar"
    android:key="screen_toolbar">

    <Preference
        android:key="toolbar_keys"
        android:title="@string/toolbar_keys" />

    <Preference
        android:key="pinned_toolbar_keys"
        android:title="@string/pinned_toolbar_keys" />

    <Preference
        android:key="clipboard_toolbar_keys"
        android:title="@string/clipboard_toolbar_keys" />

    <SwitchPreference
        android:key="quick_pin_toolbar_keys"
        android:title="@string/quick_pin_toolbar_keys"
        android:summary="@string/quick_pin_toolbar_keys_summary"
        android:defaultValue="false"
        android:persistent="true" />

    <SwitchPreference
        android:key="auto_show_toolbar"
        android:title="@string/auto_show_toolbar"
        android:summary="@string/auto_show_toolbar_summary"
        android:defaultValue="false"
        android:persistent="true" />

    <SwitchPreference
        android:key="auto_hide_toolbar"
        android:title="@string/auto_hide_toolbar"
        android:summary="@string/auto_hide_toolbar_summary"
        android:defaultValue="false"
        android:persistent="true" />

    <ListPreference
        android:key="toolbar_direction"
        android:title="@string/toolbar_direction"
        android:summary="%s"
        android:defaultValue="subtype"
        android:entries="@array/toolbar_direction_entries"
        android:entryValues="@array/toolbar_direction_values"
        android:persistent="true"
        latin:singleLineTitle="false" />

</PreferenceScreen>
